add possibility to manage dependencies

--- a/bricks/scaffold_riverpod_app/brick.yaml
+++ b/bricks/scaffold_riverpod_app/brick.yaml
@@ -36,6 +36,14 @@ vars:
     prompt: Do you want this package to be published to pub.dev?
     default: false
     description: You can always easily change that later
+  add_dependencies :
+    type: string
+    prompt: Add dependencies to your project and separate them with a comma?
+    default: ''
+  add_dev_dependencies :
+    type: string
+    prompt: Add dev dependencies to your project and separate them with a comma?
+    default: ''  
   codegen:
     type: boolean
     prompt: Enable code generation for riverpod?
